--- a/taskvenue/package.json
+++ b/taskvenue/package.json
@@ -6,15 +6,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.3",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.6",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.139",
+    "@mui/material": "^5.14.4",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.10.0",
+    "@mui/x-date-pickers": "^6.11.1",
     "@supabase/supabase-js": "^2.26.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clipboard-copy": "^4.0.1",
+    "dayjs": "^1.11.9",
     "i18next": "^23.2.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
