--- a/taskvenue/package.json
+++ b/taskvenue/package.json
@@ -21,6 +21,7 @@
     "i18next": "^23.2.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-router-dom": "^6.14.1",
