--- a/taskvenue/package.json
+++ b/taskvenue/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clipboard-copy": "^4.0.1",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "i18next": "^23.2.7",
     "moment": "^2.29.4",
