--- a/taskvenue/package.json
+++ b/taskvenue/package.json
@@ -27,6 +27,7 @@
     "react-i18next": "^13.0.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
