--- a/taskvenue/public/manifest.json
+++ b/taskvenue/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Task Venue",
   "icons": [
     {
-      "src": "favicontv.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
