--- a/taskvenue/package.json
+++ b/taskvenue/package.json
@@ -22,7 +22,9 @@
     "i18next": "^23.2.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.8.2",
+    "react-big-calendar": "^1.8.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-router-dom": "^6.14.1",
