--- a/taskvenue/package.json
+++ b/taskvenue/package.json
@@ -19,6 +19,7 @@
     "clipboard-copy": "^4.0.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "emailjs-com": "^3.2.0",
     "i18next": "^23.2.7",
     "moment": "^2.29.4",
     "pigeon-maps": "^0.21.3",
