--- a/taskvenue/package.json
+++ b/taskvenue/package.json
@@ -29,6 +29,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
